--- a/app/assets/stylesheets/internal.css
+++ b/app/assets/stylesheets/internal.css
@@ -1,3 +1,5 @@
+body { padding-top: 70px; }
+
 .main-header{
 	background-color: dodgerblue;
 }
@@ -158,4 +160,14 @@ figcaption{
 	width: 80px;
   height: 80px;
   padding: 7px;
+}
+
+.like-comment-share-row{
+  margin-left: 5px;
+  margin-top: -10px;
+  padding-bottom: 10px;
+}
+
+.comment{
+	background-color: #fcfcfc;
 }
