--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,67 +17,71 @@
     <![endif]-->
   </head>
   <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid main-header">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to  'PatidarBook', users_path, class: "main-brand" %>
+        </div>
 
-  <nav class="navbar navbar-default">
-  <div class="container-fluid main-header">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to  'PatidarBook', users_path, class: "main-brand" %>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right header-item">
-      <% if user_signed_in? %>
-        <li><%= link_to '<i class="fa fa-home" aria-hidden="true"></i>'.html_safe, home_users_path, title: 'Home'%></li>
-        <li><%= link_to '<i class="fa fa-book" aria-hidden="true"></i>'.html_safe, people_book_users_path, title: 'People Book'%></li>
-        <li><%= link_to '<i class="fa fa-book" aria-hidden="true"></i>'.html_safe, business_logs_path, title: 'Business Book'%></li>
-        <li><%= link_to '<i class="fa fa-envelope" aria-hidden="true"></i>'.html_safe, 'void:javascript(0)',  title: 'Messages'%></li>
-        <li class = 'friend-class'><%= link_to 'friends', friends_user_path(current_user.id),  title: 'Friends'%></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"  title='User'></i>   
-          <ul class="dropdown-menu">
-            <li><%= link_to 'Settings', 'void:javascript(0)'%></li>
-            <li><%= link_to 'About Us', 'void:javascript(0)'%></li>
-            <li><%= link_to 'Help', 'void:javascript(0)'%></li>
-            <li><%= link_to 'Profile', profile_user_path(current_user.id)%></li>
-            <li role="separator" class="divider"></li>
-            <li><%= link_to 'Logout', destroy_user_session_path, method: 'delete'%></li>
-          </ul>
-        </li>
-      <% else %>
-        <li><%= link_to 'Sign In', new_session_path(resource_name), title: 'Login'%></li>
-        <li><%= link_to 'Sign Up', new_registration_path(resource_name), title: 'Login'%></li>
-      <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-    <div class="container">
-      <%if user_signed_in? %>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right header-item">
+            <% if user_signed_in? %>
+            <li><%= link_to '<i class="fa fa-home" aria-hidden="true"></i>'.html_safe, home_users_path, title: 'Home'%></li>
+            <li><%= link_to '<i class="fa fa-book" aria-hidden="true"></i>'.html_safe, people_book_users_path, title: 'People Book'%></li>
+            <li><%= link_to '<i class="fa fa-book" aria-hidden="true"></i>'.html_safe, business_logs_path, title: 'Business Book'%></li>
+            <li>
+              <%= link_to 'void:javascript(0)',  title: 'Friend-request' do %>
+                <%=image_tag 'friend-request.png'%>
+              <%end%>
+            </li>
+            <li><%= link_to '<i class="fa fa-envelope-o" aria-hidden="true"></i>'.html_safe, 'void:javascript(0)',  title: 'Messages'%></li>
+            <li class = 'friend-class'><%= link_to '<i class="fa fa-bell-o" aria-hidden="true"></i>'.html_safe, user_notifications_path(current_user),  title: 'Notifications'%></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-o" aria-hidden="true"  title='User'></i>   
+                <ul class="dropdown-menu">
+                  <li><%= link_to 'Settings', 'void:javascript(0)'%></li>
+                  <li><%= link_to 'About Us', 'void:javascript(0)'%></li>
+                  <li><%= link_to 'Help', 'void:javascript(0)'%></li>
+                  <li><%= link_to 'Profile', profile_user_path(current_user.id)%></li>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to 'Logout', destroy_user_session_path, method: 'delete'%></li>
+                </ul>
+              </li>
+              <% else %>
+              <li><%= link_to 'Sign In', new_session_path(resource_name), title: 'Login'%></li>
+              <li><%= link_to 'Sign Up', new_registration_path(resource_name), title: 'Login'%></li>
+              <% end %>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+      <div class="container">
+        <%if user_signed_in? %>
         <div class = 'pull-right'>
-        <label>Last Login At:</label>
-        <%= current_user.last_sign_in_at%>
+          <label>Last Login At:</label>
+          <%= current_user.last_sign_in_at%>
         </div>
-      <% end %>
-      <div class="row">
-        <div class="col-lg-12">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div><!--/row-->
+        <% end %>
+        <div class="row">
+          <div class="col-lg-12">
+            <%= bootstrap_flash %>
+            <%= yield %>
+          </div>
+        </div><!--/row-->
 
-      <footer>
-        <p>&copy; Company 2017</p>
-      </footer>
+        <footer class= '' style='background-color: dodgerblue'>
+          <p>&copy; Company 2017</p>
+        </footer>
 
-    </div> <!-- /container -->
+      </div> <!-- /container -->
 
-  </body>
-</html>
+    </body>
+    </html>
