--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,21 +1,37 @@
 <div class='container'>
-	<div class='row'>
-		<h2>profile Page</h2>
-		<label>Name:</label><%=@user.first_name%> <%=@user.last_name%></br>
-		<label>Email:</label><%=@user.email%></br>
-		<label>Gender:</label><%=@user.gender%></br>
-		<label>Phone:</label><%=@user.phone%></br>
-		<label>Profession:</label><%=@user.profession%></br>
-		<label>Date Of Birth:</label><%=@user.dob%></br>
-		<label>Status:</label><%=@user.status%></br>
-		<label>Address:</label><%=@user.address%>
-		<%=image_tag @user.attachments%>
-		<!-- <label>Description:</label><%=@user%> -->
-		<%= form_for @user, :html => {:multipart => true} do |f| %>
-		  <p>
-		    <%= f.file_field :image, :class => 'form-control'%>
-		  </p>
-		  <p><%= f.submit %></p>
-		<% end %>
+	<div class="col-md-6 col-md-offset-3" style="background-color: #fcfcfc; border: 1px solid #ffcfff;">
+		<div class='row'>
+			<div class="col-md-12">
+				<h2 style="color: lightblue; text-align: center; text-transform: capitalize;background-color: #fcfcfc; border-bottom: 1px solid #ffcfff;">profile Page</h2>
+				<div class="col-md-6">
+					<% if @user.attachments.present? %>
+						<%=image_tag @user.attachments.last.image_url, :class => 'img-responsive', :style => 'border:2px solid darkgray;'%>
+					<% end %>	
+				</div>
+				<div class="col-md-7">
+					<label>Name:</label><%=@user.first_name%> <%=@user.last_name%></br>
+					<label>Email:</label><%=@user.email%></br>
+					<label>Gender:</label><%=@user.gender%></br>
+					<label>Phone:</label><%=@user.phone%></br>
+					<label>Profession:</label><%=@user.profession%></br>
+					<label>Date Of Birth:</label><%=@user.dob%></br>
+					<label>Status:</label><%=@user.status%></br>
+					<label>Address:</label><%=@user.address%>
+				</div>
+			</div>	
+		</div>	
+		<div class="row">
+			<div class="col-md-6">		
+				<%= form_for @user, :html => {:multipart => true} do |f| %>
+				  <label>Upload Profile</label>
+				  <div class="form-group">
+				  	<%= f.file_field :image, :class => 'form-control'%>
+				  </div>
+				  <div class="form-group">
+				  	<%= f.submit 'Update Profile', :class => 'btn btn-success'%>
+					</div>
+				<% end %>
+			</div>
+		</div>
 	</div>
 </di>
