--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
           </div>
         </div><!--/row-->
 
-        <footer class= '' style='background-color: dodgerblue'>
+        <footer class= 'fixed-bottom' >
           <p>&copy; Company 2017</p>
         </footer>
 
