--- a/app/views/friends/_friends_navigation_tab.html.haml
+++ b/app/views/friends/_friends_navigation_tab.html.haml
@@ -1,7 +1,8 @@
-.container
+.container.margin-b20
   %ul.nav.nav-tabs
     = active_link_to 'Connected', connected_friends_path, active: :exclusive, wrap_tag: :li, class: 'nav-item'
     = active_link_to 'Close Friend', close_friends_path, active: :exclusive, wrap_tag: :li, class: 'nav-item'
     = active_link_to 'Requested', requested_friends_path, active: :exclusive, wrap_tag: :li, class: 'nav-item'
     = active_link_to 'Received', received_friends_path, active: :exclusive, wrap_tag: :li, class: 'nav-item'
     = active_link_to 'Active', active_friends_path, active: :exclusive, wrap_tag: :li, class: 'nav-item'
+    = active_link_to 'All Users', friends_path, active: :exclusive, wrap_tag: :li, class: 'nav-item'
