--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,8 @@
+<style type="text/css">
+  body{
+    background-image: url('/assets/couple.jpg');
+  }
+</style>
 <div class="container">
   <div class="row">
     <div class="col-md-4 new-form">
